--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+aliases.label=Aliases
+availBytes.label=Available Bytes
 cidr4.label=CIDR v4
 cidr6.label=CIDR v6
 cronExpression.label=Cron Expression
@@ -9,6 +11,8 @@ cronNext.formatter=E, yyyy-MM-dd HH:mm
 description.label=Description
 description.layoutPriority=2
 domain.label=Domain
+driver.label=Driver
+driverConfig.label=Driver Config
 hypervisor.label=Hypervisor
 hypervisor.layoutPriority=-1
 location.label=Location
