--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 cronExpression.label=Cron Expression
 cronExpression.tooltip=Second[0-59] Minute[0-59] Hour[0-23] Day[1-31] Month[1-12] Weekday[0-7]<br/>Example 1: <b>0 0 6 * * 1</b> = Every Monday at 06:00:00<br/>Example 2: <b>0 0 5,21 * * *</b> = Every day at 06:00:00 and 21:00:00
 cronNext.label=Cron Next
@@ -21,14 +20,14 @@ cronNextRelative.label=Cron Next (relative)
 cronNextNext.label=Cron Next Next
 cronNext.formatter=E, yyyy-MM-dd HH:mm
 login.form.title=Login
-
 application.title=TELEPORT
 LocationPO.grid.title=Locations
+HostPO.grid.title=Hosts
 NetworkPO.grid.title=Networks
 HypervisorPO.grid.title=Hypervisors
 StoragePO.grid.title=Storages
 VolumePO.grid.title=Volumes
-
+VirtualMachinePO.grid.title=Virtual Machines
 aliases.label=Aliases
 availBytes.label=Available Bytes
 cidr4.label=CIDR v4
