--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ HypervisorPO.grid.title=Hypervisors
 StoragePO.grid.title=Storages
 VolumePO.grid.title=Volumes
 VirtualMachinePO.grid.title=Virtual Machines
+VolumeAttachmentPO.grid.title=VM -> Volume
 aliases.label=Aliases
 availBytes.label=Available Bytes
 cidr4.label=CIDR v4
