--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,7 +20,9 @@ cronNextRelative.label=Cron Next (relative)
 cronNextNext.label=Cron Next Next
 cronNext.formatter=E, yyyy-MM-dd HH:mm
 login.form.title=Login
+#
 application.title=TELEPORT
+#
 LocationPO.grid.title=Locations
 HostPO.grid.title=Hosts
 NetworkPO.grid.title=Networks
@@ -29,19 +31,34 @@ StoragePO.grid.title=Storages
 VolumePO.grid.title=Volumes
 VirtualMachinePO.grid.title=Virtual Machines
 VolumeAttachmentPO.grid.title=VM -> Volume
+NetworkInterfacePO.grid.title=Network Interfaces
+#
 aliases.label=Aliases
 availBytes.label=Available Bytes
 cidr4.label=CIDR v4
 cidr6.label=CIDR v6
 description.label=Description
 description.layoutPriority=2
+dev.label=Device
 domain.label=Domain
 driver.label=Driver
 driverConfig.label=Driver Config
+host.label=Host
+host.layoutPriority=-900
 hypervisor.label=Hypervisor
-hypervisor.layoutPriority=-1
+hypervisor.layoutPriority=-810
 location.label=Location
-location.layoutPriority=-1
+location.layoutPriority=-1000
 name.label=Name
 name.layoutPriority=1
+sizeBytes.label=Size
+usedBytes.label=Used
+state.label=State
+state.layoutPriority=10
+storage.label=Storage
+storage.layoutPriority=-800
+virtualMachine.label=VM
+virtualMachine.layoutPriority=-710
 vlan.label=VLAN
+volume.label=Volume
+volume.layoutPriority=-700
