--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ login.form.title=Login
 #
 application.title=TELEPORT
 #
+Action.grid.title=Actions
 LocationPO.grid.title=Locations
 HostPO.grid.title=Hosts
 NetworkPO.grid.title=Networks
