VmsOverView - implementation of overview

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,8 @@ login.form.title=Login
 #
 application.title=TELEPORT
 #
+VirtualMachinePO.overview.title=VM Overview
+#
 Action.grid.title=Actions
 LocationPO.grid.title=Locations
 HostPO.grid.title=Hosts
@@ -31,7 +33,7 @@ HypervisorPO.grid.title=Hypervisors
 StoragePO.grid.title=Storages
 VolumePO.grid.title=Volumes
 VirtualMachinePO.grid.title=Virtual Machines
-VolumeAttachmentPO.grid.title=VM -> Volume
+VolumeAttachmentPO.grid.title=Volume Attachments
 NetworkInterfacePO.grid.title=Network Interfaces
 #
 aliases.label=Aliases
